# adaloveAutomation

./: .gitignore  README.md  config.example.json  config.json  est  pyproject.toml  requirements.txt
adalove.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
adalove/api/: client.py
adalove/browser/: capture.py
adalove/config/: settings.py  subjects.py
adalove/filters/: activity.py
adalove/models/: activity.py  dashboard_metrics.py  section_info.py  student_status.py
adalove/output/: links.py  markdown.py  state.py
adalove/writers/: calendario.py  fetch.py  links.py  markdown.py  ponderadas.py  project.py  state.py  subject_links.py
cli/: main.py
docs/: output1_example.md
docs/superpowers/plans/: 2026-05-07-adalove-implementation.md  2026-05-07-dashboard-implementation.md  2026-05-08-auto-capture-credentials.md
docs/superpowers/specs/: 2026-05-07-adalove-design.md  2026-05-07-dashboard-design.md  2026-05-07-dashboard-live-data-design.md  2026-05-08-auto-capture-credentials-design.md
output/: .state.json  activities.md  links.md
tests/: test_activity.py  test_calendario_writer.py  test_capture.py  test_client.py  test_dashboard.py  test_dashboard_metrics.py  test_fetch_writer.py  test_filters.py  test_links.py  test_markdown.py  test_ponderadas_writer.py  test_settings.py  test_student_status.py  test_subject_links.py
