[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adalove"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "questionary>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]

[project.scripts]
adalove = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["adalove*", "cli*"]
